# tcu-time

./: .env.example  .gitignore  README.md  run_sample.py  tcu_curriculum_analysis.txt  tcu_curriculum_implementation_guide.md  tcu_grad_curriculum_codes.json
.github/workflows/: pipeline.yml
Docs/: 00_overview.md  01_data_pipeline.md  02_data_model.md  03_frontend.md  04_infrastructure.md  05_project_structure.md
References/: 2024.gs  2024F.json  README.md  crawler2.py  data.json  project_summary.md  ui_documentation.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/admin/: ExtractionList.tsx  ReviewPanel.tsx
frontend/src/components/auth/: LoginDialog.tsx  LoginForm.tsx  ProfileDialog.tsx  (+1 more)
frontend/src/hooks/: use-auth.ts  use-courses.ts  use-enrollments.ts  use-mobile.ts  use-scroll.tsx  use-settings.ts
frontend/src/lib/: constants.ts  database.types.ts  supabase.ts
frontend/src/pages/: AdminPage.tsx  CoursesPage.tsx  LoginPage.tsx  ProfilePage.tsx  TimetablePage.tsx
pipeline/: __init__.py  advance.py  changelog.py  classifier.py  config.py  db.py  enricher.py  extractor.py  main.py  models.py  monitor.py  pyproject.toml  sample_output.json
pipeline/tests/: conftest.py  test_advance.py  test_changelog.py  test_classifier.py  test_e2e.py  test_enricher.py  test_extractor.py  test_main.py  test_monitor.py
supabase/: config.toml
supabase/migrations/: 001_courses.sql  002_users.sql  003_pipeline_state.sql  20250312000001_courses.sql  20250312000004_rls_policies.sql  20250314000001_pipeline_improvements.sql
(+18 files in other folders)
