[project]
name = "tcu-time-pipeline"
version = "0.1.0"
description = "Data pipeline for TCU-TIME: PDF extraction, enrichment, and monitoring"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "google-genai>=1.0",
    "supabase>=2.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pydantic>=2.10",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
